--- a/projetos/projeto03/views/layouts/main.handlebars
+++ b/projetos/projeto03/views/layouts/main.handlebars
@@ -10,7 +10,14 @@
 
     {{>_navbar}}
 
-    {{{body}}}
+    
+
+    <div class="container mt-4">
+        {{>_msg}}
+        {{{body}}}
+    </div>
+
+   
 
 </body>
 
