--- a/projetos/projeto03/views/admin/index.handlebars
+++ b/projetos/projeto03/views/admin/index.handlebars
@@ -1,1 +1,2 @@
-<button class="btn btn-success">Teste</button>
+<h1>Categorias</h1>
+<a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a>
