--- a/projetos/projeto03/views/admin/categorias.handlebars
+++ b/projetos/projeto03/views/admin/categorias.handlebars
@@ -1,6 +1,7 @@
 <h2>Lista de Categorias</h2>
 <hr>
 <a href="/admin/categorias/add"><button class="btn btn-success">Nova categoria</button></a>
+<a href="/admin"><button class="btn btn-success">Home Admin</button></a>
 
 {{#each categorias}}
     <div class="card mt-4">
