--- a/projetos/projeto03/views/admin/index.handlebars
+++ b/projetos/projeto03/views/admin/index.handlebars
@@ -1,2 +1,3 @@
 <h1>Categorias</h1>
 <a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a>
+<a href="/admin/postagens"><button class="btn btn-success">Postagens</button></a>
