--- a/projetos/projeto03/views/admin/postagens.handlebars
+++ b/projetos/projeto03/views/admin/postagens.handlebars
@@ -10,7 +10,7 @@
             <p>Conteudo: {{conteudo}}</p>
             <small>Categoria: {{categoria.nome}}</small> <br>
             <small>Slug: {{slug}}</small> <br>
-            <small>Criação: {{data}}</small>
+            <small>Criação: {{data}}</small> <br>
         </div>
     </div>
 {{else}}
