--- a/projetos/projeto03/views/admin/postagens.handlebars
+++ b/projetos/projeto03/views/admin/postagens.handlebars
@@ -1,6 +1,7 @@
 <h2>Lista de postagens: </h2>
 <hr>
 <a href="/admin/postagens/add"><button class="btn btn-success">Nova Postagem</button></a>
+<a href="/admin"><button class="btn btn-success">Home Admin</button></a>
 
 {{#each postagens}}
     <div class="card mt-4">
