--- a/projetos/projeto03/views/layouts/main.handlebars
+++ b/projetos/projeto03/views/layouts/main.handlebars
@@ -13,6 +13,11 @@
     
 
     <div class="container mt-4">
+        {{#if error}}
+            <div class="alert alert-danger">{{error}}</div>
+        {{else}}
+
+        {{/if}}
         {{>_msg}}
         {{{body}}}
     </div>
