--- a/projetos/projeto03/views/index.handlebars
+++ b/projetos/projeto03/views/index.handlebars
@@ -4,7 +4,10 @@
         <p class="lead">Cara, as vezes a vida é dura, mas nada pode ser tão duro quanto uma pedra, pense nisso.</p>
         <hr>
         <p>Andre Matos</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a>
+        {{#if user}}
+        {{else}}
+        <a class="btn btn-primary btn-lg" href="/usuarios/registro" role="button">Crie uma conta</a>
+        {{/if}}
     </div>
 </div>
 
